[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itk_cucim"
authors = [{name = "Insight Software Consortium", email = "matt.mccormick@kitware.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/itk-cucim"
