[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "itk_cucim"
authors = [{name = "Insight Software Consortium", email = "matt.mccormick@kitware.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
requires-python = ">=3.7"
dependencies = [
    "itk >=5.3rc4",
    "cucim >=22.4.0",
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]

[project.urls]
Home = "https://github.com/InsightSoftwareConsortium/itk-cucim"
